--- a/Frontend/EasyBook/src/index.css
+++ b/Frontend/EasyBook/src/index.css
@@ -5,3 +5,12 @@
 body {
     @apply font-montserrat;
   }
+
+  .text-stroke-white {
+    -webkit-text-stroke: 0.3px #fff; /* Adjust the size and color of the stroke */
+  }
+  .text-stroke-black {
+    -webkit-text-stroke: 0.3px #000000; /* Adjust the size and color of the stroke */
+    
+  }
+  
