--- a/Frontend/EasyBook/src/index.css
+++ b/Frontend/EasyBook/src/index.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+
+*{
     @apply font-montserrat;
+    margin: 0px;
+    padding: 0px;
   }
 
   .text-stroke-white {
